Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -205,7 +205,6 @@ body {
                 float: left;
                 display: block;
                 padding: 10px 0;
-                text-align: center;
                 width: 100%;
                 @media @tablet {
                     border-bottom: 1px solid fade(@color-swatch4, 25%);
@@ -251,7 +250,6 @@ body {
                     color: @font-swatch6-color;
                     line-height: @font-swatch6-line-height;
                     letter-spacing: @font-swatch6-letter-spacing;
-                    text-align: center;
                     &:hover {
                         color: @font-swatch6-color-hover;
                         text-decoration: underline;
@@ -277,7 +275,6 @@ body {
                         line-height: @font-swatch6-line-height;
                         letter-spacing: @font-swatch6-letter-spacing;
                         position: relative;
-                        text-align: center;
                         &:after {
                             content: "\25BC";
                             font-size: 8px;
